--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,9 @@ html {
 body {
 	height: 100%;
 	background-color: #6699cc;
+	background-image: url("../img/bg.jpg"),-moz-linear-gradient(60deg,rgba(255,165,150,0.5) 5%,rgba(0,228,255,0.35));
+	background-image: url("../img/bg.jpg"),-webkit-linear-gradient(60deg,rgba(255,165,150,0.5) 5%,rgba(0,228,255,0.35));
+	background-image: url("../img/bg.jpg"),-ms-linear-gradient(60deg,rgba(255,165,150,0.5) 5%,rgba(0,228,255,0.35));
 	background-image: url("../img/bg.jpg"),linear-gradient(60deg,rgba(255,165,150,0.5) 5%,rgba(0,228,255,0.35));
 	background-repeat: repeat,no-repeat,no-repeat;
 	background-size: 100% ,100%,cover,cover;
