--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ body {
 	background-image: url("../img/bg.jpg"),-ms-linear-gradient(60deg,rgba(255,165,150,0.5) 5%,rgba(0,228,255,0.35));
 	background-image: url("../img/bg.jpg"),linear-gradient(60deg,rgba(255,165,150,0.5) 5%,rgba(0,228,255,0.35));
 	background-repeat: repeat,no-repeat,no-repeat;
-	background-size: 100% ,100%,cover,cover;
+	background-size:cover;
 	background-position: top left,center center,bottom center;
 	background-attachment: fixed,fixed,fixed
 }
@@ -111,7 +111,7 @@ body:after {
 	background-image: url("../images/overlay.png"),-ms-linear-gradient(60deg,rgba(255,165,150,0.5) 5%,rgba(0,228,255,0.35));
 	background-image: url("../images/overlay.png"),linear-gradient(60deg,rgba(255,165,150,0.5) 5%,rgba(0,228,255,0.35));
 	background-repeat: repeat,no-repeat;
-	background-size: 100px 100px,cover;
+	background-size:cover;
 	background-position: top left,center center;
 	-moz-transition: opacity 1.75s ease-out;
 	-webkit-transition: opacity 1.75s ease-out;
